--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div id="blocker">
+        <div id="instructions">
+            <p style="font-size:36px">
+                Click to play
+            </p>
+            <p>
+                Move: WASD<br/>
+                Jump: SPACE<br/>
+                Look: MOUSE
+            </p>
+        </div>
+    </div>
     <canvas class="webgl"></canvas>
     <script src="script.js" type="module"></script>
 </body>
