--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <div id="blocker">
+    <!-- <div id="blocker">
         <div id="instructions">
             <p style="font-size:60px; font-weight:bolder;">
                 Space Invader
@@ -42,9 +42,9 @@
                 Click Anywhere to Play
             </p>
         </div>
-    </div>
+    </div> -->
     <canvas class="webgl"></canvas>
-    <script src="script.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 
 </body>
 
