--- a/easy.html
+++ b/easy.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Invader</title>
     <link href="style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <style>
 			#blocker {
                 font-family: 'Courier New', monospace;
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				/* background-color: rgba(0,0,0,0.5); */
+				background-color: rgba(0,0,0,0.5);
 			}
 
 			#instructions {
@@ -41,16 +39,21 @@
                 Space Invader
             </p>
             <p>
-                Pick Your Level
+                <br><br>
+                Click Anywhere to Play
             </p>
-            <div class="flex-column">
-                <a href="hard.html" class="btn btn-lg btn-dark p-3">Hard</a>
-                <a href="easy.html" class="btn btn-lg btn-dark p-3">Easy</a>
-            </div>
         </div>
     </div>
+
+    <div id="scoreboard">
+        <div>
+          <span class="nilai"></span>
+          <div class="smalltext">Score</div>
+    </div>
+
+    </div>
     <canvas class="webgl"></canvas>
-    <!-- <script src="main.js" type="module"></script> -->
+    <script src="easy.js" type="module"></script>
 
 </body>
 
