--- a/hard.html
+++ b/hard.html
@@ -1,57 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invader</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" />
     <style>
-			#blocker {
-                font-family: 'Courier New', monospace;
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				background-color: rgba(0,0,0,0.5);
-			}
+      #blocker {
+        font-family: "Courier New", monospace;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
 
-			#instructions {
-				width: 100%;
-				height: 100%;
+      #instructions {
+        width: 100%;
+        height: 100%;
 
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-				text-align: center;
-				font-size: 30px;
-				cursor: pointer;
-			}
-      </style>
-</head>
+        text-align: center;
+        font-size: 30px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
 
-<body>
-    
+  <body>
     <div id="blocker">
-        <div id="instructions">
-            <p style="font-size:60px; font-weight:bolder;">
-                Space Invader
-            </p>
-            <p>
-                <br><br>
-                Click Anywhere to Play
-            </p>
-        </div>
+      <div id="instructions">
+        <p style="font-size: 60px; font-weight: bolder">Space Invader</p>
+        <p>
+          <br /><br />
+          Click Anywhere to Play
+        </p>
+      </div>
     </div>
     <div id="scoreboard">
-        <div>
-          <span class="nilai"></span>
-          <div class="smalltext">Score</div>
+      <div>
+        <span class="nilai"></span>
+        <div class="smalltext">Score</div>
+      </div>
     </div>
     <canvas class="webgl"></canvas>
     <script src="hard.js" type="module"></script>
-
-</body>
-
+  </body>
 </html>
