--- a/easy.html
+++ b/easy.html
@@ -39,6 +39,13 @@
           Click Anywhere to Play
         </p>
       </div>
+      <div id="gameover">
+        <p id="win" style="margin-top: 10px; font-size: 60px; font-weight: bolder">Game Over! You Win</p>
+        <p id="lose" style="margin-top: 10px; font-size: 60px; font-weight: bolder">Game Over! You Lost</p>
+        <p onclick="window .location.reload();">
+          Restart
+        </p>
+      </div>
     </div>
 
     <div id="scoreboard">
