pilihan restart atau menu

--- a/easy.html
+++ b/easy.html
@@ -42,9 +42,10 @@
       <div id="gameover">
         <p id="win" style="margin-top: 10px; font-size: 60px; font-weight: bolder">Game Over! You Win</p>
         <p id="lose" style="margin-top: 10px; font-size: 60px; font-weight: bolder">Game Over! You Lost</p>
-        <p onclick="window .location.reload();">
-          Restart
-        </p>
+        <div class="flex-column">
+          <a onclick="window .location.reload();">Restart</a>
+          <a href="index.html" style="color: white; text-decoration:none">Menu</a>
+        </div>
       </div>
     </div>
 
