add health display

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
           <div class="smalltext">Score</div>
         </div>
       </div>
+      <div id="healthboard">
+        <div>
+            <span class="healthvalue"></span>
+            <div class="smalltext">Health</div>
+          </div>
+      </div>
     <canvas class="webgl"></canvas>
     <script src="main.js" type="module"></script>
 </body>
