--- a/index.html
+++ b/index.html
@@ -35,7 +35,46 @@
 
 <body>
     
-    <div id="blocker">
+      <div id="blocker">
+        <div id="instructions">
+          <div>
+            <div class="row">
+              <div class="col-sm px-3">
+                <p style="font-size:60px; line-height: 1; font-weight:bolder;">
+                  Space<br>Invader
+              </p>
+              <p id="status"></p>
+              <p>
+                  Pick Your Level
+              </p>
+              <div class="flex-column">
+                  <a id="hard" class="btn btn-lg btn-dark p-3">Hard</a>
+                  <a id="easy" class="btn btn-lg btn-dark p-3">Easy</a>
+              </div>
+              </div>
+              <div class="col-sm px-5">
+                <p style="font-size:25px; margin-top: 30px; font-weight:bolder;">
+                  <u>How to Play</u> 
+              </p>
+              <p style="font-size:15px;">
+                Use arrow keys to move your plane in 4 directions available.
+              </p>
+              <p style="font-size:15px;">
+                Use the SPACE key to shoot missiles at your target(s). 
+              </p>
+              <p style="font-size:15px;">
+                Stay away from missiles and your target! 
+              </p>
+              <p style="font-size:15px; font-weight: bold;">
+                Are you ready? 
+              </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+    </div>
+    <!-- <div id="blocker">
         <div id="instructions">
             <p style="font-size:60px; font-weight:bolder;">
                 Space Invader
@@ -49,7 +88,7 @@
                 <a id="easy" class="btn btn-lg btn-dark p-3">Easy</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <div id="gameover" style="display: none;">
         <p id="win" style="margin-top: 10px; font-size: 60px; font-weight: bolder">Game Over! You Win</p>
         <p id="lose" style="margin-top: 10px; font-size: 60px; font-weight: bolder">Game Over! You Lost</p>
